# performativ-tech-challenge

./: README.md  pyproject.toml  result.json
.github/workflows/: main.yml
scripts/: build_app.sh  build_dependencies.sh  format_code.sh  run_app.sh  test_app.sh
src/: main.py  requirements.in  requirements.txt
src/controllers/: financial_metrics_controller.py  main_controller.py
src/controllers/tests/: test_financial_metrics_controller.py  test_main_controller.py
src/entities/: financial_metrics.py  metrics.py  position.py  position_entities.py
src/models/: calculator_context.py  decimals.py  performativ_api.py  performativ_api_params.py  performativ_resource.py  positions_data.py
src/repositories/: enviroment_loader.py  performativ_api_repo.py  positions_data_repo.py
src/repositories/tests/: test_environment_loader.py  test_performativ_api_repo.py  test_positions_data_repo.py
src/services/: basket_aggregator.py  basket_calculator.py  financial_metric_calculator.py  financial_metrics_calculator.py  performativ_resource_loader.py  position_calculator.py  position_metric_calculator.py  positions_file_loader.py
src/services/position_calculators/: base_metric_calculator.py  calculator_factory.py  is_open_calculator.py  price_local_calculator.py  quantity_calculator.py  return_per_period_calculator.py  return_per_period_percentage_calculator.py  value_calculator.py  value_end_calculator.py  value_local_calculator.py  value_start_calculator.py
src/services/tests/: test_basket_calculator.py  test_financial_metrics_calculator.py  test_performativ_resource_loader.py  test_position_calculator.py  (+1 more)
src/tests/: test_main.py
