[project]
name = "FinancialMetricsCalculator"
version = "1.0"
description = ""
requires-python = ">=3.14"

[tool.mypy]
cache_dir = "output/.mypy_cache"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
mypy_path = ["src"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "*.tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false


[tool.ruff]
target-version = "py314"
cache-dir = "output/.ruff_cache"
exclude = [
    ".venv", 
    ".git",
    ".git-rewrite",
    ".ruff_cache",
    ".pytest_cache",
    "__pypackages__"
]
line-length = 88
src = ["src"]
fix = false

[tool.ruff.lint]
select = ["E", "F", "I", "C90", "B"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "INP001"
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pytest.ini_options]
cache_dir = "output/.pytest_cache"
pythonpath = [".", "src"]
addopts = """
    -vv
    --cov
    --cov-report term
    --cov-report html
    --cov-report xml
"""

[tool.coverage.run]
branch = true
omit = [
    "test_*.py",
    "*conftest.py",
    "*__init__*"
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    'if __name__ == "__main__":',
]

[tool.coverage.html]
directory = "output/reports/htmlcov"

[tool.coverage.xml]
output = "output/reports/coverage.xml"
